@@ -5,11 +5,9 @@
 # https://puppet.com/docs/pe/2018.1/overview/getting_support_for_pe.html
 # ------------------------------------------------------------------------------
 # Release       Puppet   Ruby   EOL
-# SIMP 6.2      4.10     2.1.9  TBD
-# PE 2016.4     4.10     2.1.9  2018-12-31 (LTS)
-# PE 2017.3     5.3      2.4.4  2018-12-31
-# SIMP 6.3      5.5      2.4.4  TBD***
-# PE 2018.1     5.5      2.4.4  2020-05 (LTS)***
+# PE 2017.3     5.3      2.4.5  2018-12-31
+# SIMP 6.3      5.5      2.4.5  TBD***
+# PE 2018.1     5.5      2.4.5  2020-05 (LTS)***
 # PE 2019.0     6.0      2.5.1  2019-08-31^^^
 #
 # *** = Modules created for SIMP 6.3+ are not required to support Puppet < 5.5
@@ -37,6 +35,7 @@ addons:
 
 before_install:
   - rm -f Gemfile.lock
+  - for x in ${HOME}/.rvm/gems/*; do gem uninstall -I -x -i "${x}" -v '>= 1.17' bundler || true; gem uninstall -I -x -i "${x}@global" -v '>= 1.17' bundler || true; done
   - gem install -v '~> 1.17' bundler
 
 global:
@@ -46,7 +45,7 @@ jobs:
   include:
     - stage: check
       name: 'Syntax, style, and validation checks'
-      rvm: 2.4.4
+      rvm: 2.4.5
       env: PUPPET_VERSION="~> 5"
       script:
         - bundle exec rake check:dot_underscore
@@ -59,21 +58,14 @@ jobs:
         - bundle exec puppet module build
 
     - stage: spec
-      name: 'Puppet 4.10 (SIMP 6.2, PE 2016.4)'
-      rvm: 2.1.9
-      env: PUPPET_VERSION="~> 4.10.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
       name: 'Puppet 5.3 (PE 2017.3)'
-      rvm: 2.4.4
+      rvm: 2.4.5
       env: PUPPET_VERSION="~> 5.3.0"
       script:
         - bundle exec rake spec
 
     - stage: spec
-      rvm: 2.4.4
+      rvm: 2.4.5
       name: 'Puppet 5.5 (SIMP 6.3, PE 2018.1)'
       env: PUPPET_VERSION="~> 5.5.0"
       script:
@@ -81,7 +73,7 @@ jobs:
 
     - stage: spec
       name: 'Latest Puppet 5.x'
-      rvm: 2.4.4
+      rvm: 2.4.5
       env: PUPPET_VERSION="~> 5.0"
       script:
         - bundle exec rake spec
@@ -94,7 +86,7 @@ jobs:
         - bundle exec rake spec
 
     - stage: deploy
-      rvm: 2.4.4
+      rvm: 2.4.5
       script:
         - true
       before_deploy:
@@ -103,7 +95,7 @@ jobs:
       deploy:
         - provider: releases
           api_key:
-            secure: "ArYe+u1iF1j1X7NMc+4F56Kbv5PmrEPh2We+TFGiS+EadYLsiGyB7tz8IltgFK5HLAK/VCe4VHzTAhJBJ9/0mWUx9F+CZI7lTR9o20DWIiwBfG/TZ0++uh8jkGHr5skUWFwR6ola3+e9M8I5xz/VT5lsGMEneR2XHhTKafgftlfJSkXfyDBi+cCUURbokk3zPtyGjiUd/MRDZWxhLPgVbE9y/E09D1dFxcT2P75vA1/ZPvqpAP5WGbapCiRj2MTpLxBJ9kJ61CwGwiY4c/0wSwiMmSYh25ZuqcA7QzJKyyFOiS+zQd8ftA/At9m75V66lSvMB8hMxRr1aqwcy2lDBRjWDhoJZ7oBRYxTQ5S11wpAt8ak2B7lWqTsrFPCXXEXWPG7VHaiwlvfRsan+EvGutcrGrFAO9etRmxdi5UNk/uZNqbZJkaRTH+Zb5dsmaXaQW7VqnGLOg25980kN6VBjOfzZr2aykEhBskn4lF+SAdxGIxxYnmaTcXybc/wPmBJaRah3AIG6LvweONXFAPR01HlZCY1OusO+qH3Axv69VwMEQot/HHieDHEW1ZC1eKHDOoTCzywoN2pHyasbhRe9xe2ee5Yxar6hgzYRdCRQHuoVuxOvQRDvBUbwUQmYITEXWD9LylMkv21K6rAz5B9UjTBvcMaXbOHLG8zorfEuKo="
+            secure: "k9Nx0/6V6FEOzYPhsn8410ZGA7mcYc/H1vR+YH02yDhKLRILI1XWZ8vjXobvY+1bdnhbUj8O8gUjaZv7PIztaRzRqu2FeTJb9R3fFhXpt2Uv9ZY+5Hq+LoOpEj8LaXCtVHlss8EVxU7dXg96NxrMenUeB5WPDrJdQu+lEkcvmNNysCLljmLda9MlGTBlsdpugMsM6b+k6LIF64hovup4ewQSoHq3RxciHN3rjn/K8e7oY3tclD+rISUZOTeLr+fjS3LhAW2R5u+0FjuzIE/Gcq/szuQC5N2CAegVt8H6q7DRjkklVI0L6FXCoAd0t6CHwZ+PlftphAqh4FjYrtTOaUirPpsKWMLfHSWANXneVZ8uhqDiMTNLMYnOewZrTyyLqIh/d7xbEcv6uQuCdbSoWmupZfkXAKvoecMA3+3y4dVJmf/olqlz4KSE7UMKettG/RogtSIZ6YDhfuWiI6P29NZDjzhKHLmmPxl4upaiEVt6XoxDeh2fqKpe3ggURIcG7xv7CbzCmhYz4EZ4a4rd6ieUvjrpGLshke0O3PZBHYXA84fnWiUb5tQCGAX0pE0sJmGqnufHeMzBOi7JDBp8XLZAjEFcIjjn+3Tb9whZh+gw5RVUH768fp2gH+STJKNGfz9ClXyKJkEFb2ZmYboKZ7WptnFMM6TmcC2O4RYT4Yo="
           skip_cleanup: true
           on:
             tags: true
@@ -111,7 +103,7 @@ jobs:
         - provider: puppetforge
           user: simp
           password:
-            secure: "swR/ubedBph+fFfQKQP1b/x1oISGjnH3U8N1u3cNBVpD87zmPdR1qEkxmoYl5ZGp4NVMu9gBMgN80tS69AUfSIIrPGRynU0SzZ8ssI80tpzPlOXzG1JWx29Hogvgay/XUFTi5oCRDPA+uahI+9V7itLc2lerdhJClJF2OkZ3sISTFp1zAGSA8/3zvOn+5mmYs6Fecv//nOTAvLjBgpWcG/FJCVcIxoeW9dIPzj9EmL0iKwHzzqElfcbrqNX/FE+rgELPfNVdS/OXQz46Kgoz471jyRWd1qwLwDE/PvvpZs38zdKyDuOtpDPkaCbCSzxTEpUBAfte4bFAlDJufnlnudwMKSZA8+OYXwpn7607W0+KDtNQZ/w4WZ1dBuX60LdcetTmxoJWn5mshR00BSheiz1cYjQq+IQn2bVA7Y9LOqL/nLU1rrkbtI/SQBvvmXPic8D+92RXDUumdIZ0gyf2hv0d31dUtCglsBD966mI9gFyfDtl5O1+hFXscHGVxTWingwD4AylGpyy7J3yI28WZyz7PfTPu1nLjQ6ZbbFL5u0C4Ka8lSrkjlDsVaoD/eV13If7arlPlqZpmzy7KBMBCPtj9ez1Ufp41fDceejCIpf1PGeuhgAkR3xCrV+dgEuvVDq3oj9oqq+MsmiUATSc/7Lhhff7tUhIUrtN4xlkbf0="
+            secure: "bweemJAHZQN8lEEDRqR5JPyyd4+5rgzqWvKfUHsynEtzuwlE2xesQ7MUpqS9O+qOQaltFyjLzjqVvaDhAivxL8hzJPTChBqT26fCCSw5eE36bpZPlXvru8BaThjjEDvgGqZAjSDKOuS8rLwgwRMD6ZiBVHZ7XEQADAEtWtBsV9LsoUJYU6noTTxkGG4MHya5I6erW9GUbyJ90UIvtMSyjQ5pLCirCOgsNUD/RF0wNl8jukAuQbQRRT+LGBNENS3PnvLCk52AeizUpR15bMcrgPv0338WnRfGufz+itRlx4ZU0899COFpuPSBmuLP4WQp1mTRVGa6cMFWzA19yhjzhOX68Pyv/hBgFzlsdsqjLK7XvE9Ux2KravAnCe833K5b6i6kcok5+KDrdjQxvyh0TGBIA+75sLx8VViKTjXqxf2OEL5W1VEgmhxQPCkFh38oBvE1rkcFLexoFVyAU+Jblu6yPrw3fuUUMLGalEkYjyHLqUYU7x+Kd6NotDrQ7OxfVWbfrBwpDC9xn/wVKASs3kkcHzYfc6y1xzpJ5Xlod2nTa+FXo7q2yECUgnjGVu680t/wCDydOY4GtsaDRRbgi5qrIm5I7Ie42sA2fQOmkix/XFIcm/EUsdTx71OllfdWOVteoa+4JiWSVgskm0PG9JEHiVwtScxr26jzVO6UaII="
           on:
             tags: true
             condition: '($SKIP_FORGE_PUBLISH != true)'
