@@ -1,0 +1,19 @@
+---
+version: 2.0.0
+profiles:
+  disa_stig:
+    controls:
+      disa_stig: true
+  nist_800_53:
+    controls:
+      nist_800_53_rev4: true
+  nist_800_53_rev4:
+    controls:
+      nist_800_53_rev4: true
+controls:
+  disa_stig:
+    oval:com.puppet.forge.simp.xinetd.banner: 0
+    oval:com.puppet.forge.simp.xinetd.log_type: 0
+  nist_800_53_rev4:
+    oval:com.puppet.forge.simp.xinetd.banner: 0
+    oval:com.puppet.forge.simp.xinetd.log_type: 0
